<resources>
    <string name="app_name">MaestroDetalleSqlServer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jack el programador</string>
    <string name="nav_header_subtitle">jackelprogramador@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_version">v1.0.18</string>

    <string name="menu_producto">Productos</string>
    <string name="contentDescripcion">-</string>
    <string name="fecha_hora_digito">2022.07.07 12.12.12</string>
    <string name="buscar">Buscar</string>
    <string name="costo">Costo</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="existencia">Existencia</string>
    <string name="detalle">Detalle</string>
    <string name="cantidad">Cantidad</string>
    <string name="registrar_actualizar">Producto</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="carrito">Carrito [0]</string>
    <string name="confirmar">Confirmar</string>
    <string name="importe">Importe:</string>
    <string name="hasta">Hasta</string>
    <string name="desde">Desde</string>
    <string name="pedido">Pedido:</string>
    <string name="descripcion_app">App de ejemplo maestro detalle con jtds, sql server y patron mvvm</string>
    <string name="titulo_app">Maestro Detalle Sql</string>
    <string name="version">Version</string>
    <string name="acerca_de_la_app">Acerca de la app</string>
    <string name="titulo_autor">Developer</string>
    <string name="jack_el_programador">Jack el programador</string>
    <string name="email">jackelprogramador@gmail.com</string>
    <string name="registrar_editar">Registrar | Editar</string>
    <string name="cliente">Cliente</string>
    <string name="monto_numero">0.00</string>
    <string name="titulo">TITULO</string>
    <string name="contentDescription">-</string>
    <string name="_1">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="puerto">Puerto server</string>
    <string name="ip">Ip Server</string>
    <string name="usuario_server">Usuario server</string>
    <string name="clave_usuario_server">Clave usuario server</string>
    <string name="mensaje">Es obligatorio la configuración de los datos del servidor ya que sin éstos datos será imposible conectarse con la DB. Necesitamos obligatoriamente la ip del servidor, el puerto, el nombre de usuario y clave. Éste usuario debe tener acceso de lectura y escritura a la DB.</string>
    <string name="maestro_detalle_sqlserver">Maestro Detalle SqlServer</string>
    <string name="subtitulo_inicio">Esta actividad seria como el login de la app, para este caso no sera necesario implementarlo. Presione en la parte inferior derecha para configurar los datos del servidor para poder acceder a la base de datos e ingresar a la app.</string>
    <string name="ingresar">Ingresar</string>
    <string name="configurar_servidor">Configurar Servidor</string>
    <string name="ip_servidor">IP Servidor (192.168.1.77)</string>
</resources>